2003-03-17  Philippe Elie  <phil.el@wanadoo.fr>

	* TOODO: update

	* pp/derive_files.cpp: special to retrieve 2.5 module

2003-03-17  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* pp/symbol_container_imp.h:
	* pp/symbol_container_imp.cpp:
	* pp/profile_container.h:
	* pp/profile_container.cpp: find(string symbol_name) return a vector
	  of symbol rather a a single symbol
	* pp/oprofpp.cpp: use above change so oprofpp -s will show all
	  symbol with the same name.

	* pp/symbol_functors.h: remove unused functors equal_symbol_by_name

2003-03-17  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libutil/op_fileio.h:
	* libutil/op_fileio.c: op_write_u64() new
	* libutil/op_types.h: continue our silly typedef: add u64

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: op_bfd::arch_bits_per_address() new allowing
	  to get, on a per-binary basis, the vma size.

	* pp/oprofpp.cpp: fix 64 bits arch gprof output. Fix multiplier and
	  get the multiplier of gprof file at runtime. Fix a very old bug
	  where we credit the samples to previous gprof bin having the effect
	  than sample at start of function was credited to the previous
	  function

2003-03-17  John Levon  <levon@movementarian.org>

	* daemon/opd_kernel.c:
	* daemon/opd_kernel.h:
	* daemon/opd_image.c:
	* daemon/oprofiled.c: don't try to reread the module
	list on a failed EIP match. We must have the module load
	notification instead.

2003-03-17  John Levon  <levon@movementarian.org>

	* daemon/opd_kernel.c: fix module accounting. Remove
	quick-drop code that can't work.

	* doc/oprofile.1.in:
	* doc/oprofile.xml: english tweaks

2003-03-17  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in:
	* doc/oprofile.xml: remove documentaton about -P, update doc about -p

	* pp/derive_files.h:
	* pp/derive_files.cpp: check_image_name(), add_to_alternate_filename()
	  functions moved from op_time.cpp

	* pp/op_time_options.h:
	* pp/op_time_options.cpp: