@@ -1,3 +1,8 @@
+2003-03-18  John Levon  <levon@movementarian.org>
+
+	* daemon/opd_image.c:
+	* libop/op_interface_25.h: rename to MODULE_LOADED_CODE
+
 2003-03-17  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* TOODO: update
